<resources>
    <string name="app_name">SortingApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="tab_connection">Connection</string>
    <string name="tab_search">Search</string>
    <string name="tab_insert">Insert</string>
    <string name="tab_Users">Users</string>
    <string name="title_activity_login">SortingApp</string>
    <string name="LoginInfo">Please enter yout Login data.</string>
    <string name="ServerUrl">Server URL</string>
    <string name="Database_txt">Database</string>
    <string name="Pass">Password</string>
    <string name="User">Username</string>
    <string name="Connect">Connect</string>
    <string name="ConnectionState">Connection state</string>
    <string name="ConnectedTo">Connected to</string>
    <string name="Disconnect">Disconnect</string>
    <string name="StoreLoginData">Store logindata</string>
    <string name="ConnectedTotxt">Connected to:</string>
    <string name="name">name</string>
    <string name="group">group</string>
    <string name="place">place</string>
    <string name="state">state</string>
    <string name="comment">comment</string>
    <string name="img">image</string>
    <string name="placeholder">***********</string>
    <string name="selectedDatabase">Selected Database:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="CommunicationError">Error while communicating</string>
    <string name="select">Select</string>
    <string name="id">Id</string>
    <string name="PleaseWait">Please Wait ...</string>
    <string name="SelectAnOption">Please select an option</string>
    <string name="perm">Permission</string>
    <string name="enabled">Enabled</string>
    <string name="message">Message</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="Rent">Rent</string>
    <string name="close">Close</string>
    <string name="sversion" translatable="false">1.0.0</string>
    <string name="SetUpText">The server is not yet setup. Do you want to set it up with the current user as the administrator?</string>
    <string name="cversion" translatable="false">1.0.0</string>
    <string name="address">address</string>
    <string name="ErrorInsertNull">The following boxes can not be  null:</string>

</resources>
