<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <TextView
        android:id="@+id/LoginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginInfo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/l_ip_dburl"
        android:layout_width="@dimen/widthInput"
        android:layout_height="@dimen/hight_Input"
        android:layout_below="@+id/LoginInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/ServerUrl"
        android:inputType="textUri"
        android:selectAllOnFocus="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

    <EditText
        android:id="@+id/l_ip_db"
        android:layout_width="@dimen/widthInput"
        android:layout_height="@dimen/hight_Input"
        android:layout_below="@+id/l_ip_dburl"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Database_txt"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

    <EditText
        android:id="@+id/l_ip_user"
        android:layout_width="@dimen/widthInput"
        android:layout_height="@dimen/hight_Input"
        android:layout_alignStart="@+id/l_ip_db"
        android:layout_below="@+id/l_ip_db"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="textUri"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

    <EditText
        android:id="@+id/l_ip_pass"
        android:layout_width="@dimen/widthInput"
        android:layout_height="@dimen/hight_Input"
        android:layout_alignStart="@+id/l_ip_user"
        android:layout_below="@+id/l_ip_user"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

    <Button
        android:id="@+id/l_btn_Connect"
        android:layout_width="@dimen/widthInput"
        android:layout_height="@dimen/hight_Input"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:onClick="btnConnect"
        android:text="@string/Connect" />

    <CheckBox
        android:id="@+id/l_chkbx_StoreLoginData"
        android:layout_width="318dp"
        android:layout_height="@dimen/hight_Input"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/l_ip_dburl"
        android:layout_marginTop="228dp"
        android:text="@string/StoreLoginData" />
</RelativeLayout>

