<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertFragment">


    <EditText
        android:id="@+id/i_ip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/i_ip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/group"
        android:inputType="textPersonName"
        app:dropDownDrawable="@android:drawable/arrow_down_float" />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/i_ip_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_group"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/place"
        android:inputType="textPersonName"
        app:dropDownDrawable="@android:drawable/arrow_down_float"/>

    <EditText
        android:id="@+id/i_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_place"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/i_ip_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_address"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        app:dropDownDrawable="@android:drawable/arrow_down_float"/>



    <EditText
        android:id="@+id/i_ip_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_state"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/i_ip_img"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/i_ip_name"
        android:layout_below="@+id/i_ip_comment"
        android:ems="10"
        android:hint="@string/img"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/i_btn_camera"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/i_ip_img"
        android:layout_toEndOf="@+id/i_ip_img"
        android:background="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/i_btn_insert"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_ip_img"
        android:layout_centerHorizontal="true"
        android:onClick="btnInsert"
        android:text="@string/tab_insert" />

</RelativeLayout>