<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/u_ip_parn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="parn" />

    <Button
        android:id="@+id/u_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/u_ip_parn"
        android:layout_marginEnd="23dp"
        android:text="@string/tab_search" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="91dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/u_ip_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/u_ip_parn"
        android:layout_marginTop="103dp"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/u_btn_change1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/u_btn_search"
        android:layout_alignTop="@+id/u_ip_username"
        android:text="@string/change" />

    <EditText
        android:id="@+id/u_ip_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/u_ip_parn"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/u_btn_chnage2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/u_btn_search"
        android:layout_alignTop="@+id/u_ip_password"
        android:text="Change" />

    <EditText
        android:id="@+id/u_ip_permission"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/u_ip_parn"
        android:layout_marginTop="222dp"
        android:ems="10"
        android:hint="@string/perm"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/u_btn_change3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/u_btn_search"
        android:layout_alignTop="@+id/u_ip_permission"
        android:text="Change" />

    <EditText
        android:id="@+id/u_ip_enabled"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/u_ip_parn"
        android:layout_marginBottom="235dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enabled" />

    <Button
        android:id="@+id/u_btn_change4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/u_btn_search"
        android:layout_alignTop="@+id/u_ip_enabled"
        android:text="Change" />

    <EditText
        android:id="@+id/u_ip_message"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/u_ip_parn"
        android:layout_marginBottom="176dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/u_btn_message"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/u_btn_search"
        android:layout_alignTop="@+id/u_ip_message"
        android:text="@string/message" />

    <Button
        android:id="@+id/u_btn_delete"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/delete" />

</RelativeLayout>