<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectFragment">
    

    <TextView
        android:id="@+id/c_txt_connectedToDisplay"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ConnectedTotxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@drawable/background"/>

    <TextView
        android:id="@+id/c_txt_connectedToOutput"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/c_txt_selectedDatabaseDisplay"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_below="@+id/c_txt_connectedToOutput"
        android:layout_centerHorizontal="true"
        android:text="@string/selectedDatabase"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/c_txt_selectedDatabaseOutput"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ScrollView
        android:layout_width="267dp"
        android:layout_height="203dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/c_txt_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Messages" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/c_btn_disconnect"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:text="@string/Disconnect" />

</RelativeLayout>